Added jumbotron to blog page

--- a/src/mdb.ui/src/pages/sample/style.css
+++ b/src/mdb.ui/src/pages/sample/style.css
@@ -1,4 +1,4 @@
 .jumbotron-custom {
-    background-image: url(https://picsum.photos/1800/300);
-    background-size: cover;
+    /* background-image: url(https://picsum.photos/1800/300);
+    background-size: cover; */
   }
