--- a/src/mdb.ui/src/pages/post/style.css
+++ b/src/mdb.ui/src/pages/post/style.css
@@ -9,8 +9,18 @@
 
 }
 
+#postFooter {
+    background-color: #B4B4B4;
+}
+
 .author-image {
     border-radius: 50%;
     width: 52px;
     height: 52px;
+}
+
+.author-image-footer {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
 }
