Limiting description text to a particular height. Adding read more button #24

--- a/src/mdb.ui/src/components/postPreview/style.css
+++ b/src/mdb.ui/src/components/postPreview/style.css
@@ -3,3 +3,10 @@
     width: 35px;
     height: 35px;
 }
+
+.card-text {
+    overflow: hidden;
+    height: 3.6em;
+    line-height: 1.2em;
+    margin-bottom: 0;
+}
