--- a/src/mdb.ui/src/components/jumbotron/style.css
+++ b/src/mdb.ui/src/components/jumbotron/style.css
@@ -11,6 +11,7 @@
   position: absolute;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/public/banner.png");
   background-size: cover;
+  background-position: center;
   filter: blur(8px);
   height: 110%;
   width: 110%;
