#61 Image fit issue in post content

--- a/src/mdb.ui/src/components/postBody/style.css
+++ b/src/mdb.ui/src/components/postBody/style.css
@@ -38,3 +38,9 @@
       box-shadow: -38px 6px, -14px -6px, 14px 6px;
     }
   }
+
+  #postBody > img {
+    max-width: 85%;
+    max-height: 85%;
+    object-fit: cover;
+  }
