--- a/src/mdb.ui/src/components/postBody/style.css
+++ b/src/mdb.ui/src/components/postBody/style.css
@@ -39,8 +39,8 @@
     }
   }
 
-  #postBody > img {
-    max-width: 85%;
-    max-height: 85%;
+  #postBody img {
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
   }
